[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://audio/Alim_Lox.mp3" type="AudioStream" id=2]
[ext_resource path="res://sprites/other/Концепт меню.png" type="Texture" id=3]
[ext_resource path="res://style/theme/main_theme.tres" type="Theme" id=4]

[sub_resource type="Theme" id=1]

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Container" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ExitButton" type="Button" parent="Container"]
anchor_right = 0.225
margin_left = 902.0
margin_top = 550.0
margin_right = 1014.0
margin_bottom = 593.0
theme = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 1, 0.0862745, 0.0862745, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Exit"

[node name="PLAYButton" type="Button" parent="Container"]
margin_left = 287.0
margin_top = 291.0
margin_right = 481.0
margin_bottom = 339.0
theme = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.996078, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0.0156863, 0.984314, 0, 1 )
flat = true
icon_align = 1

[node name="LoadButton" type="Button" parent="Container"]
margin_left = 508.0
margin_top = 286.0
margin_right = 641.0
margin_bottom = 334.0
theme = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.996078, 0.00784314, 0.00784314, 1 )
custom_colors/font_color_focus = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 0.0156863, 0.984314, 0, 1 )
flat = true
icon_align = 1

[node name="HostButton" type="Button" parent="Container"]
visible = false
margin_left = 463.0
margin_top = 287.0
margin_right = 624.0
margin_bottom = 323.0
text = "Host (Not working)"

[node name="JoinButton" type="Button" parent="Container"]
visible = false
margin_left = 463.0
margin_top = 334.0
margin_right = 624.0
margin_bottom = 370.0
text = "Join (Not working)"

[node name="КонцептМеню" type="Sprite" parent="Container"]
position = Vector2( 512, 300 )
scale = Vector2( 0.533333, 0.277778 )
z_index = -1
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -11.274
autoplay = true

[node name="Label" type="Label" parent="."]
visible = false
light_mask = 2
margin_left = 252.0
margin_top = 219.0
margin_right = 780.0
margin_bottom = 403.0
theme = ExtResource( 4 )
text = "Вы действительно хотите начать новую игру?"

[node name="Yes" type="Button" parent="Label"]
margin_left = 58.0
margin_top = 75.0
margin_right = 125.0
margin_bottom = 102.0
text = "Yes"
flat = true

[node name="No" type="Button" parent="Label"]
margin_left = 306.0
margin_top = 76.0
margin_right = 318.0
margin_bottom = 103.0
text = "No"
flat = true

[connection signal="pressed" from="Container/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Container/PLAYButton" to="." method="_on_PLAYButton_pressed"]
[connection signal="pressed" from="Container/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Label/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Label/No" to="." method="_on_No_pressed"]
